--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -49,7 +49,7 @@ p {
        padding: 0px;
        margin-bottom: 0px;
    }
-/*  formatação de imagens com legenda */
+/*  Formatação de imagens com legenda */
 figure.foto-legenda {
     position: relative;
     border: 8px solid white;
